--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -1,3 +1,6 @@
+$color-primary: #9356dc;
+$color-secondary: #ff79da;
+
 nav {
   display: flex;
   flex-direction: row;
@@ -14,9 +17,13 @@ a {
   position: absolute;
   left: 5%;
   top: 45%;
+  &:hover {
+    color: $color-primary;
+    font-size: 1.5em;
+  }
 }
 
-img {
+header > img {
   width: 100%;
   height: 36vh;
   object-fit: cover;
@@ -177,19 +184,17 @@ img {
 }
 
 @media screen and (min-width: 992px) {
-  img {
+  header > img {
     height: 67vh;
   }
 
   .menu {
-    max-width: 100%;
     margin: -50px auto 0 auto;
     padding: 30px 50px;
     display: flex;
     flex-direction: column;
-    font-size: 1.2em;
     .card-dish {
-    padding: 20px;
+      padding: 20px;
     }
   }
 
@@ -202,15 +207,26 @@ img {
     padding-bottom: 10px;
   }
 
-  .dishes {
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    gap: 3vw;
-    margin: auto;
+  .menu .card-dish:hover {
+    padding-right: 6vw;
   }
 
- 
+  .menu .card-dish:hover .dish-animation {
+    transform: translate(-5vw);
+  }
+
+  .menu .card-dish .dish-animation {
+    width: 5vw;
+    right: -5vw;
+  }
+
+  .dishes {
+    display: grid;
+    grid-template-columns: 25vw 25vw 25vw;
+    margin: auto;
+    gap: 3vw;
+  }
+
   .menu .order .btn {
     width: 33vw;
     margin-top: 50px;
