--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,12 +25,6 @@ a {
   font-size: 1.5em;
 }
 
-header > img {
-  width: 100%;
-  height: 36vh;
-  object-fit: cover;
-}
-
 .menu {
   margin-top: -50px;
   z-index: 1;
@@ -140,12 +134,6 @@ header > img {
   font-size: 1.5em;
   transition: transform 500ms ease-in-out 100ms;
 }
-.menu .order {
-  text-align: center;
-}
-.menu .order .btn {
-  width: 50vw;
-}
 
 @keyframes appearance {
   0% {
@@ -210,20 +198,150 @@ header > img {
     width: 5vw;
     right: -5vw;
   }
+}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* font-family: 'Roboto', sans-serif; */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .grid-restos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3vw;
+  }
+}
+@media screen and (min-width: 992px) {
   .dishes {
     display: grid;
     grid-template-columns: 25vw 25vw 25vw;
     margin: auto;
     gap: 3vw;
   }
-  .menu .order .btn {
+}
+header {
+  text-align: center;
+}
+
+nav {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  position: relative;
+  padding-top: 10px;
+}
+
+.logo {
+  width: 200px;
+  padding: 10px;
+}
+
+header > img {
+  width: 100%;
+  height: 36vh;
+  object-fit: cover;
+}
+
+footer {
+  background-color: #343434;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  line-height: 1.7em;
+  color: white;
+}
+@media screen and (min-width: 992px) {
+  footer {
+    padding: 3vw 10vw;
+  }
+}
+
+footer a {
+  color: white;
+}
+
+.btn {
+  color: white;
+  font-size: 1em;
+  border: none;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  padding: 20px;
+  -webkit-box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
+  background: rgb(255, 121, 218);
+  background: -moz-linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
+  background: -webkit-linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
+  background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
+}
+.btn:hover {
+  -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
+  background: linear-gradient(171deg, #fface8, #ae80e5);
+}
+
+.order {
+  text-align: center;
+}
+.order .btn {
+  width: 50vw;
+}
+@media screen and (min-width: 992px) {
+  .order .btn {
     width: 33vw;
     margin-top: 50px;
   }
-}
-/* font-family: 'Roboto', sans-serif; */
-* {
-  margin: 0;
 }
 
 body {
@@ -244,21 +362,6 @@ h5 {
   font-weight: 600;
 }
 
-header {
-  text-align: center;
-}
-
-nav {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  position: relative;
-  padding-top: 10px;
-}
-
-.logo {
-  width: 200px;
-  padding: 10px;
-}
-
 a {
   text-decoration: none;
 }
@@ -266,8 +369,8 @@ a {
 h1 {
   font-family: "Shrikhand", cursive;
   font-size: 2em;
-  vertical-align: middle;
-  padding: 5px;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 
 .localization {
@@ -294,29 +397,6 @@ h2 {
 h3 {
   font-size: 1.5em;
   padding-bottom: 25px;
-}
-
-.btn {
-  color: white;
-  font-size: 1em;
-  border: none;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  border-radius: 30px;
-  padding: 20px;
-  -webkit-box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
-  background: rgb(255, 121, 218);
-  background: -moz-linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
-  background: -webkit-linear-gradient(171deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 75%);
-  background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
-}
-.btn:hover {
-  -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
-  box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
-  background: linear-gradient(171deg, #fface8, #ae80e5);
 }
 
 section {
@@ -443,19 +523,6 @@ h5 {
   padding: 10px 20px;
 }
 
-footer {
-  background-color: #343434;
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-  line-height: 1.7em;
-  color: white;
-}
-
-footer a {
-  color: white;
-}
-
 h6 {
   font-family: "Shrikhand", cursive;
   font-size: 1.1em;
@@ -576,11 +643,6 @@ h6 {
   .operation {
     width: 50%;
   }
-  .grid-restos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3vw;
-  }
   .resto-place-fav {
     line-height: 1.6em;
   }
@@ -642,9 +704,6 @@ h6 {
   .bg-icons {
     width: 15vw;
     height: 15vw;
-  }
-  footer {
-    padding: 3vw 10vw;
   }
 }
 
