--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,35 +1,18 @@
 @import "pages/home";
 @import "pages/page-resto";
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,650;0,900;1,100;1,300;1,400;1,500;1,650;1,900&family=Shrikhand&display=swap");
-/* font-family: 'Roboto', sans-serif; */
-// font-family: 'Shrikhand', cursive;
+@import "abstracts/variables";
+@import 'abstracts/mixins';
 
-$color-primary: #9356dc;
-$color-secondary: #ff79da;
-$color-teriary: #99e2d0;
-$grey-bg: #f6f6f6;
+@import "base/reset";
+@import "base/typography";
 
-@mixin bg-btn {
-  background: rgb(255, 121, 218);
-  background: -moz-linear-gradient(
-    171deg,
-    rgba(255, 121, 218, 1) 0%,
-    rgba(147, 86, 220, 1) 75%
-  );
-  background: -webkit-linear-gradient(
-    171deg,
-    rgba(255, 121, 218, 1) 0%,
-    rgba(147, 86, 220, 1) 75%
-  );
-  background: linear-gradient(171deg, $color-secondary 0%, $color-primary 75%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff79da",endColorstr="#9356dc",GradientType=1);
-}
+@import "layout/navigation";
+@import "layout/grid";
+@import "layout/header";
+@import "layout/footer";
 
-* {
-  margin: 0;
-}
+@import "components/buttons";
 
 body {
   max-width: 768px;
@@ -49,21 +32,6 @@ h5 {
   font-weight: 600;
 }
 
-header {
-  text-align: center;
-}
-
-nav {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  position: relative;
-  padding-top: 10px;
-}
-
-.logo {
-  width: 200px;
-  padding: 10px;
-}
-
 a {
   text-decoration: none;
 }
@@ -71,8 +39,8 @@ a {
 h1 {
   font-family: "Shrikhand", cursive;
   font-size: 2em;
-  vertical-align: middle;
-  padding: 5px;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 
 .localization {
@@ -99,28 +67,6 @@ h2 {
 h3 {
   font-size: 1.5em;
   padding-bottom: 25px;
-}
-
-.btn {
-  color: white;
-  font-size: 1em;
-  border: none;
-  margin-top: 30px;
-  margin-bottom: 20px;
-  border-radius: 30px;
-  padding: 20px;
-  -webkit-box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
-  @include bg-btn;
-  &:hover {
-    -webkit-box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
-    box-shadow: 4px 5px 15px 1px rgba(0, 0, 0, 0.75);
-    background: linear-gradient(
-      171deg,
-      lighten(#ff79da, 10),
-      lighten(#9356dc, 10)
-    );
-  }
 }
 
 section {
@@ -252,18 +198,7 @@ h5 {
   padding: 10px 20px;
 }
 
-footer {
-  background-color: #343434;
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-  line-height: 1.7em;
-  color: white;
-}
 
-footer a {
-  color: white;
-}
 
 h6 {
   font-family: "Shrikhand", cursive;
@@ -380,12 +315,7 @@ h6 {
     width: 50%;
   }
 
-  .grid-restos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3vw;
-  }
-
+  
   .resto-place-fav {
     line-height: 1.6em;
   }
@@ -462,9 +392,5 @@ h6 {
   .bg-icons {
     width: 15vw;
     height: 15vw;
-  }
-
-  footer {
-    padding: 3vw 10vw;
   }
 }
