position heart desktop corrected

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -393,4 +393,15 @@ h6 {
     width: 15vw;
     height: 15vw;
   }
+
+  .fa-regular.fa-heart,
+  .fa-solid.fa-heart {
+    right: 2vw;
+  }
+
+  .resto-name-fav{}
+  .fa-regular.fa-heart,
+  .fa-solid.fa-heart {
+    right: 10vw;
+  }
 }
