--- a/public/css/style.css
+++ b/public/css/style.css
@@ -705,6 +705,14 @@ h6 {
     width: 15vw;
     height: 15vw;
   }
+  .fa-regular.fa-heart,
+  .fa-solid.fa-heart {
+    right: 2vw;
+  }
+  .fa-regular.fa-heart,
+  .fa-solid.fa-heart {
+    right: 10vw;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
