--- a/sass/main.scss
+++ b/sass/main.scss
@@ -399,9 +399,10 @@ h6 {
     right: 2vw;
   }
 
-  .resto-name-fav{}
+  .resto-name-fav{
   .fa-regular.fa-heart,
   .fa-solid.fa-heart {
     right: 10vw;
   }
+}
 }
