pattern sass & responsive desktop changed

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,3 +13,12 @@ footer {
 footer a {
   color: white;
 }
+
+.fa-utensils {
+  padding-right: 14px;
+  padding-left: 2px;
+}
+
+.fa-handshake-angle {
+  padding-right: 10px;
+}
