--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,461 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,650;0,900;1,100;1,300;1,400;1,500;1,650;1,900&family=Shrikhand&display=swap");
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* font-family: 'Roboto', sans-serif; */
+h1,
+h2,
+h6 {
+  font-weight: 500;
+}
+
+h3,
+h4,
+h5 {
+  font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 2em;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+h2 {
+  font-size: 1em;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 1.5em;
+  padding-bottom: 25px;
+}
+
+h4 {
+  font-size: 0.9em;
+}
+
+h5 {
+  font-size: 1.1em;
+}
+
+h6 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.1em;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
+
+body {
+  max-width: 768px;
+  margin: auto;
+  font-family: "Roboto", sans-serif;
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body {
+    max-width: 992px;
+  }
+}
+@media screen and (min-width: 992px) {
+  body {
+    min-width: 992px;
+    max-width: none;
+  }
+}
+
+.spinner {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: spinner-opacity 3000ms forwards;
+  z-index: 2;
+}
+
+.icons {
+  width: 20vw;
+  height: 20vw;
+  position: relative;
+}
+@media screen and (min-width: 992px) {
+  .icons {
+    width: 10vw;
+    height: 10vw;
+  }
+}
+
+.bg-icons {
+  background-color: #9356dc;
+  border-radius: 50%;
+  width: 30vw;
+  height: 30vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: bg-icons 2500ms forwards;
+}
+@media screen and (min-width: 992px) {
+  .bg-icons {
+    width: 15vw;
+    height: 15vw;
+  }
+}
+
+.icons img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation: load-icons 550ms ease-in-out both;
+}
+.icons img:nth-child(1) {
+  animation-delay: 550ms;
+}
+.icons img:nth-child(2) {
+  animation-delay: 1100ms;
+}
+.icons img:nth-child(3) {
+  animation-delay: 1650ms;
+}
+.icons img:nth-child(4) {
+  animation-delay: 2200ms;
+}
+.icons img:nth-child(5) {
+  animation-delay: 2750ms;
+}
+.icons img:nth-child(6) {
+  animation-delay: 3300ms;
+}
+
+@keyframes spinner-opacity {
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes bg-icons {
+  0% {
+    transform: scale(0);
+  }
+  10%, 90% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes load-icons {
+  0% {
+    transform: scale(0);
+  }
+  33% {
+    transform: scale(0.8);
+  }
+  75% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+.fa-regular.fa-heart {
+  font-size: 1.4em;
+  position: absolute;
+  right: 5vw;
+  opacity: 1;
+  z-index: 1;
+}
+.fa-regular.fa-heart:hover, .fa-regular.fa-heart:active, .fa-regular.fa-heart:focus {
+  opacity: 0;
+  transition: opacity 800ms;
+}
+.fa-regular.fa-heart:hover + .fa-solid.fa-heart, .fa-regular.fa-heart:active + .fa-solid.fa-heart, .fa-regular.fa-heart:focus + .fa-solid.fa-heart {
+  visibility: visible;
+  transform-origin: bottom;
+  opacity: 1;
+  transition: opacity 800ms;
+}
+
+.fa-solid.fa-heart {
+  font-size: 1.4em;
+  position: absolute;
+  right: 5vw;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.bg-heart {
+  cursor: pointer;
+  background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 a {
   color: white;
 }
 
+.localization {
+  height: 55px;
+  line-height: 55px;
+  background-color: #e8e8e8;
+}
+
+.fa-location-dot {
+  translate: -15px;
+}
+
+.explore-operation {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .explore-operation {
+    display: flex;
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 992px) {
+  .explore-operation {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+section {
+  padding: 40px 20px;
+}
+
+.explore {
+  padding: 40px 30px;
+  text-align: center;
+  background-color: #f6f6f6;
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .explore {
+    width: 50%;
+    background-color: #f3ecff;
+  }
+}
+@media screen and (min-width: 992px) {
+  .explore {
+    background-color: #f3ecff;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .operation {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .operation {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .steps {
+    display: flex;
+    flex: auto;
+    justify-content: center;
+    gap: 2vw;
+  }
+}
+
+.step {
+  background-color: #f6f6f6;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  margin: 0 0 20px 20px;
+  border-radius: 20px;
+  padding: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.step .fa-solid {
+  padding-right: 20px;
+}
+.step:hover {
+  background-color: #f3ecff;
+}
+.step:hover .fa-solid {
+  color: #9356dc;
+}
+@media screen and (min-width: 992px) {
+  .step {
+    max-width: 30vw;
+  }
+}
+
+.number {
+  color: white;
+  background: #9356dc;
+  font-size: 0.8em;
+  text-align: center;
+  line-height: 1.7em;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  translate: -40px;
+}
+
+.restaurants {
+  background-color: #f6f6f6;
+}
+@media screen and (min-width: 992px) {
+  .restaurants {
+    padding: 3vw 10vw;
+  }
+}
+
+.card-resto {
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 13px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.card-resto:hover {
+  margin-top: -5px;
+  box-shadow: rgba(147, 86, 220, 0.3) 0px 1px 2px 0px, rgba(147, 86, 220, 0.3) 0px 2px 6px 2px;
+}
+.card-resto img {
+  max-width: 100%;
+  height: 70%;
+  object-fit: cover;
+  border-radius: 13px 13px 0 0;
+}
+.card-resto .new {
+  background-color: #99e2d0;
+  color: #25836c;
+  position: absolute;
+  top: 1.5vh;
+  right: 2.5vw;
+  padding: 7px 15px;
+  border-radius: 3px;
+  font-weight: 500;
+}
+
+.container {
+  margin: auto 0;
+}
+
+.resto-place-fav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .resto-place-fav {
+    line-height: 1.6em;
+  }
+  .fa-regular.fa-heart,
+  .fa-solid.fa-heart {
+    right: 4vw;
+  }
+  .menu {
+    max-width: 600px;
+    margin: -30px auto 0 auto;
+  }
+  .menu .card-dish {
+    padding: 20px;
+  }
+  .menu .card-dish .dish-animation .fa-circle-check {
+    font-size: 1.7em;
+  }
+}
+@media screen and (min-width: 992px) {
+  .step {
+    max-width: 30vw;
+  }
+  .restaurants {
+    padding: 3vw 10vw;
+  }
+  .card-resto {
+    height: 40vh;
+  }
+  .resto-place-fav {
+    line-height: 1.6em;
+  }
+  .fa-regular.fa-heart,
+  .fa-solid.fa-heart {
+    right: 2vw;
+  }
+  .resto-name-fav .fa-regular.fa-heart,
+  .resto-name-fav .fa-solid.fa-heart {
+    right: 10vw;
+  }
+}
 nav {
   display: flex;
   flex-direction: row;
@@ -199,62 +652,7 @@ a {
     right: -5vw;
   }
 }
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* font-family: 'Roboto', sans-serif; */
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) {
   .grid-restos {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -308,6 +706,15 @@ footer a {
   color: white;
 }
 
+.fa-utensils {
+  padding-right: 14px;
+  padding-left: 2px;
+}
+
+.fa-handshake-angle {
+  padding-right: 10px;
+}
+
 .btn {
   color: white;
   font-size: 1em;
@@ -344,305 +751,7 @@ footer a {
   }
 }
 
-body {
-  max-width: 768px;
-  margin: auto;
-  font-family: "Roboto", sans-serif;
-}
-
-h1,
-h2,
-h6 {
-  font-weight: 500;
-}
-
-h3,
-h4,
-h5 {
-  font-weight: 600;
-}
-
-a {
-  text-decoration: none;
-}
-
-h1 {
-  font-family: "Shrikhand", cursive;
-  font-size: 2em;
-  padding-top: 5px;
-  padding-bottom: 10px;
-}
-
-.localization {
-  height: 55px;
-  line-height: 55px;
-  background-color: #e8e8e8;
-}
-
-.fa-location-dot {
-  translate: -15px;
-}
-
-h2 {
-  font-size: 1em;
-  font-weight: 500;
-}
-
-.explore {
-  padding: 40px 30px;
-  text-align: center;
-  background-color: #f6f6f6;
-}
-
-h3 {
-  font-size: 1.5em;
-  padding-bottom: 25px;
-}
-
-section {
-  padding: 40px 20px;
-}
-
-.step {
-  background-color: #f6f6f6;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  margin: 0 0 20px 20px;
-  border-radius: 20px;
-  padding: 30px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.step .fa-solid {
-  padding-right: 20px;
-}
-.step:hover {
-  background-color: #f3ecff;
-}
-.step:hover .fa-solid {
-  color: #9356dc;
-}
-
-.number {
-  color: white;
-  background: #9356dc;
-  font-size: 0.8em;
-  text-align: center;
-  line-height: 1.7em;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  translate: -40px;
-}
-
-h4 {
-  font-size: 0.9em;
-}
-
-h5 {
-  font-size: 1.1em;
-}
-
-.restaurants {
-  background-color: #f6f6f6;
-}
-
-.fa-regular.fa-heart {
-  font-size: 1.4em;
-  position: absolute;
-  right: 5vw;
-  opacity: 1;
-  z-index: 1;
-}
-.fa-regular.fa-heart:hover, .fa-regular.fa-heart:active, .fa-regular.fa-heart:focus {
-  opacity: 0;
-  transition: opacity 800ms;
-}
-.fa-regular.fa-heart:hover + .fa-solid.fa-heart, .fa-regular.fa-heart:active + .fa-solid.fa-heart, .fa-regular.fa-heart:focus + .fa-solid.fa-heart {
-  visibility: visible;
-  transform-origin: bottom;
-  opacity: 1;
-  transition: opacity 800ms;
-}
-
-.fa-solid.fa-heart {
-  font-size: 1.4em;
-  position: absolute;
-  right: 5vw;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.bg-heart {
-  cursor: pointer;
-  background: linear-gradient(171deg, #ff79da 0%, #9356dc 75%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.card-resto {
-  height: 30vh;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border-radius: 13px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  margin-bottom: 20px;
-  position: relative;
-}
-.card-resto:hover {
-  margin-top: -5px;
-  box-shadow: rgba(147, 86, 220, 0.3) 0px 1px 2px 0px, rgba(147, 86, 220, 0.3) 0px 2px 6px 2px;
-}
-.card-resto img {
-  max-width: 100%;
-  height: 70%;
-  object-fit: cover;
-  border-radius: 13px 13px 0 0;
-}
-.card-resto .new {
-  background-color: #99e2d0;
-  color: #25836c;
-  position: absolute;
-  top: 1.5vh;
-  right: 2.5vw;
-  padding: 7px 15px;
-  border-radius: 3px;
-  font-weight: 500;
-}
-
-.container {
-  margin: auto 0;
-}
-
-.resto-place-fav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-}
-
-h6 {
-  font-family: "Shrikhand", cursive;
-  font-size: 1.1em;
-  font-weight: 400;
-  padding-bottom: 10px;
-}
-
-.fa-utensils {
-  padding-right: 14px;
-  padding-left: 2px;
-}
-
-.fa-handshake-angle {
-  padding-right: 10px;
-}
-
-.spinner {
-  background-color: white;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: spinner-opacity 3000ms forwards;
-}
-
-.icons {
-  width: 20vw;
-  height: 20vw;
-  position: relative;
-}
-
-.bg-icons {
-  background-color: #9356dc;
-  border-radius: 50%;
-  width: 30vw;
-  height: 30vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: bg-icons 2500ms forwards;
-}
-
-.icons img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  animation: load-icons 550ms ease-in-out both;
-}
-.icons img:nth-child(1) {
-  animation-delay: 550ms;
-}
-.icons img:nth-child(2) {
-  animation-delay: 1100ms;
-}
-.icons img:nth-child(3) {
-  animation-delay: 1650ms;
-}
-.icons img:nth-child(4) {
-  animation-delay: 2200ms;
-}
-.icons img:nth-child(5) {
-  animation-delay: 2750ms;
-}
-.icons img:nth-child(6) {
-  animation-delay: 3300ms;
-}
-
-@keyframes spinner-opacity {
-  85% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-@keyframes bg-icons {
-  0% {
-    transform: scale(0);
-  }
-  10%, 90% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-@keyframes load-icons {
-  0% {
-    transform: scale(0);
-  }
-  33% {
-    transform: scale(0.8);
-  }
-  75% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  body {
-    max-width: 992px;
-  }
-  .explore-opeation {
-    display: flex;
-    flex-direction: row;
-  }
-  .explore {
-    width: 50%;
-    background-color: #f3ecff;
-  }
-  .operation {
-    width: 50%;
-  }
   .resto-place-fav {
     line-height: 1.6em;
   }
@@ -662,48 +771,14 @@ h6 {
   }
 }
 @media screen and (min-width: 992px) {
-  body {
-    min-width: 992px;
-    max-width: none;
-  }
-  .explore-opeation {
-    display: flex;
-    flex-direction: row;
-  }
-  .explore {
-    width: 50%;
-    background-color: #f3ecff;
-    padding-left: 10vw;
-  }
-  .operation {
-    width: 50%;
-    padding-right: 10vw;
-    padding-left: 5vw;
-  }
   .step {
     max-width: 25vw;
-  }
-  .restaurants {
-    padding: 3vw 10vw;
-  }
-  .grid-restos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3vw;
   }
   .card-resto {
     height: 40vh;
   }
   .resto-place-fav {
     line-height: 1.6em;
-  }
-  .icons {
-    width: 10vw;
-    height: 10vw;
-  }
-  .bg-icons {
-    width: 15vw;
-    height: 15vw;
   }
   .fa-regular.fa-heart,
   .fa-solid.fa-heart {
