--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,650;0,900;1,100;1,300;1,400;1,500;1,650;1,900&family=Shrikhand&display=swap");
 /* font-family: 'Roboto', sans-serif; */
 // font-family: 'Shrikhand', cursive;
+
+h1,
+h2,
+h6 {
+  font-weight: 500;
+}
+
+h3,
+h4,
+h5 {
+  font-weight: 600;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 2em;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+h2 {
+    font-size: 1em;
+    font-weight: 500;
+  }
+  
+  h3 {
+    font-size: 1.5em;
+    padding-bottom: 25px;
+  }
+  
+  h4 {
+    font-size: 0.9em;
+  }
+  
+  h5 {
+    font-size: 1.1em;
+  }
+  
+  h6 {
+    font-family: "Shrikhand", cursive;
+    font-size: 1.1em;
+    font-weight: 400;
+    padding-bottom: 10px;
+  }
