--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,12 +56,12 @@ table {
 /* font-family: 'Roboto', sans-serif; */
 h1,
 h2,
+h4,
 h6 {
   font-weight: 500;
 }
 
 h3,
-h4,
 h5 {
   font-weight: 600;
 }
@@ -254,6 +254,106 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
+@keyframes appearance {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.appearance {
+  animation: appearance 1.5s ease-in-out;
+}
+
+.dish1 {
+  animation-delay: 0;
+}
+
+.dish2 {
+  animation-delay: 150ms;
+}
+
+.dish3 {
+  animation-delay: 300ms;
+}
+
+.dish4 {
+  animation-delay: 400ms;
+}
+
+@media screen and (min-width: 768px) {
+  .grid-restos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3vw;
+  }
+}
+@media screen and (min-width: 992px) {
+  .dishes {
+    display: grid;
+    grid-template-columns: 25vw 25vw 25vw;
+    justify-content: center;
+    gap: 3vw;
+  }
+}
+header {
+  text-align: center;
+}
+
+nav {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  position: relative;
+  padding-top: 10px;
+}
+
+.logo {
+  width: 200px;
+  padding: 10px;
+}
+
+header > img {
+  width: 100%;
+  height: 36vh;
+  object-fit: cover;
+}
+@media screen and (min-width: 992px) {
+  header > img {
+    height: 67vh;
+  }
+}
+
+footer {
+  background-color: #343434;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  line-height: 1.7em;
+  color: white;
+}
+@media screen and (min-width: 992px) {
+  footer {
+    padding: 3vw 10vw;
+  }
+}
+
+footer a {
+  color: white;
+}
+
+.fa-utensils {
+  padding-right: 14px;
+  padding-left: 2px;
+}
+
+.fa-handshake-angle {
+  padding-right: 10px;
+}
+
 a {
   color: white;
 }
@@ -382,6 +482,11 @@ section {
   margin-bottom: 20px;
   position: relative;
 }
+@media screen and (min-width: 992px) {
+  .card-resto {
+    height: 40vh;
+  }
+}
 .card-resto:hover {
   margin-top: -5px;
   box-shadow: rgba(147, 86, 220, 0.3) 0px 1px 2px 0px, rgba(147, 86, 220, 0.3) 0px 2px 6px 2px;
@@ -414,48 +519,25 @@ section {
   align-items: center;
   padding: 10px 20px;
 }
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) {
   .resto-place-fav {
     line-height: 1.6em;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
   .fa-regular.fa-heart,
   .fa-solid.fa-heart {
     right: 4vw;
   }
-  .menu {
-    max-width: 600px;
-    margin: -30px auto 0 auto;
-  }
-  .menu .card-dish {
-    padding: 20px;
-  }
-  .menu .card-dish .dish-animation .fa-circle-check {
-    font-size: 1.7em;
-  }
 }
 @media screen and (min-width: 992px) {
-  .step {
-    max-width: 30vw;
-  }
-  .restaurants {
-    padding: 3vw 10vw;
-  }
-  .card-resto {
-    height: 40vh;
-  }
-  .resto-place-fav {
-    line-height: 1.6em;
-  }
   .fa-regular.fa-heart,
   .fa-solid.fa-heart {
     right: 2vw;
   }
-  .resto-name-fav .fa-regular.fa-heart,
-  .resto-name-fav .fa-solid.fa-heart {
-    right: 10vw;
-  }
 }
+
 nav {
   display: flex;
   flex-direction: row;
@@ -486,6 +568,32 @@ a {
   padding: 20px;
   border-radius: 40px 40px 0 0;
 }
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .menu {
+    max-width: 600px;
+    margin: -30px auto 0 auto;
+  }
+}
+@media screen and (min-width: 992px) {
+  .menu .menu {
+    padding: 30px 50px;
+    display: flex;
+    flex-direction: column;
+  }
+  .menu .menu .card-dish {
+    padding: 20px;
+  }
+  .menu .menu .card-dish .dish-animation {
+    width: 5vw;
+    right: -5vw;
+  }
+  .menu .menu .card-dish:hover {
+    padding-right: 6vw;
+  }
+  .menu .menu .card-dish:hover .dish-animation {
+    transform: translate(-5vw);
+  }
+}
 .menu .resto-name-fav {
   display: flex;
   flex-direction: row;
@@ -493,6 +601,15 @@ a {
   justify-content: space-between;
   padding-top: 5px;
   padding-bottom: 10px;
+}
+@media screen and (min-width: 992px) {
+  .menu .resto-name-fav {
+    justify-content: center;
+  }
+  .menu .resto-name-fav .fa-regular.fa-heart,
+  .menu .resto-name-fav .fa-solid.fa-heart {
+    right: 10vw;
+  }
 }
 .menu .resto-name-fav h2 {
   font-family: "Shrikhand", cursive;
@@ -588,133 +705,6 @@ a {
   transition: transform 500ms ease-in-out 100ms;
 }
 
-@keyframes appearance {
-  0% {
-    transform: translateY(20px);
-    opacity: 0;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-.appearance {
-  animation: appearance 1.5s ease-in-out;
-}
-
-.dish1 {
-  animation-delay: 0;
-}
-
-.dish2 {
-  animation-delay: 150ms;
-}
-
-.dish3 {
-  animation-delay: 300ms;
-}
-
-.dish4 {
-  animation-delay: 400ms;
-}
-
-@media screen and (min-width: 992px) {
-  header > img {
-    height: 67vh;
-  }
-  .menu {
-    margin: -50px auto 0 auto;
-    padding: 30px 50px;
-    display: flex;
-    flex-direction: column;
-  }
-  .menu .card-dish {
-    padding: 20px;
-  }
-  .menu .resto-name-fav {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding-top: 5px;
-    padding-bottom: 10px;
-  }
-  .menu .card-dish:hover {
-    padding-right: 6vw;
-  }
-  .menu .card-dish:hover .dish-animation {
-    transform: translate(-5vw);
-  }
-  .menu .card-dish .dish-animation {
-    width: 5vw;
-    right: -5vw;
-  }
-}
-@media screen and (min-width: 768px) {
-  .grid-restos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 3vw;
-  }
-}
-@media screen and (min-width: 992px) {
-  .dishes {
-    display: grid;
-    grid-template-columns: 25vw 25vw 25vw;
-    margin: auto;
-    gap: 3vw;
-  }
-}
-header {
-  text-align: center;
-}
-
-nav {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  position: relative;
-  padding-top: 10px;
-}
-
-.logo {
-  width: 200px;
-  padding: 10px;
-}
-
-header > img {
-  width: 100%;
-  height: 36vh;
-  object-fit: cover;
-}
-
-footer {
-  background-color: #343434;
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-  line-height: 1.7em;
-  color: white;
-}
-@media screen and (min-width: 992px) {
-  footer {
-    padding: 3vw 10vw;
-  }
-}
-
-footer a {
-  color: white;
-}
-
-.fa-utensils {
-  padding-right: 14px;
-  padding-left: 2px;
-}
-
-.fa-handshake-angle {
-  padding-right: 10px;
-}
-
 .btn {
   color: white;
   font-size: 1em;
@@ -748,45 +738,6 @@ footer a {
   .order .btn {
     width: 33vw;
     margin-top: 50px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
-  .resto-place-fav {
-    line-height: 1.6em;
-  }
-  .fa-regular.fa-heart,
-  .fa-solid.fa-heart {
-    right: 4vw;
-  }
-  .menu {
-    max-width: 600px;
-    margin: -30px auto 0 auto;
-  }
-  .menu .card-dish {
-    padding: 20px;
-  }
-  .menu .card-dish .dish-animation .fa-circle-check {
-    font-size: 1.7em;
-  }
-}
-@media screen and (min-width: 992px) {
-  .step {
-    max-width: 25vw;
-  }
-  .card-resto {
-    height: 40vh;
-  }
-  .resto-place-fav {
-    line-height: 1.6em;
-  }
-  .fa-regular.fa-heart,
-  .fa-solid.fa-heart {
-    right: 2vw;
-  }
-  .resto-name-fav .fa-regular.fa-heart,
-  .resto-name-fav .fa-solid.fa-heart {
-    right: 10vw;
   }
 }
 
