--- a/sass/abstracts/_animation.scss
+++ b/sass/abstracts/_animation.scss
@@ -123,3 +123,39 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+// APPEARANCE DISHES (TOP & DELAY)
+@keyframes appearance {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.appearance {
+  animation: appearance 1.5s ease-in-out;
+}
+
+.dish1 {
+  animation-delay: 0;
+}
+
+.dish2 {
+  animation-delay: 150ms;
+}
+
+.dish3 {
+  animation-delay: 300ms;
+}
+
+.dish4 {
+  animation-delay: 400ms;
+}
