--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -10,7 +10,7 @@
   .dishes {
     display: grid;
     grid-template-columns: 25vw 25vw 25vw;
-    margin: auto;
+    justify-content: center;
     gap: 3vw;
   }
 }
