--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,4 +17,7 @@ header > img {
   width: 100%;
   height: 36vh;
   object-fit: cover;
+  @media screen and (min-width: 992px) {
+    height: 67vh;
+  }
 }
