--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -1,6 +1,3 @@
-$color-primary: #9356dc;
-$color-secondary: #ff79da;
-
 nav {
   display: flex;
   flex-direction: row;
@@ -30,6 +27,30 @@ a {
   background-color: #f6f6f6;
   padding: 20px;
   border-radius: 40px 40px 0 0;
+  @media screen and (min-width: 768px) and (max-width: 992px) {
+    max-width: 600px;
+    margin: -30px auto 0 auto;
+  }
+  @media screen and (min-width: 992px) {
+    .menu {
+      padding: 30px 50px;
+      display: flex;
+      flex-direction: column;
+      .card-dish {
+        padding: 20px;
+        .dish-animation {
+          width: 5vw;
+          right: -5vw;
+        }
+        &:hover {
+          padding-right: 6vw;
+          .dish-animation {
+            transform: translate(-5vw);
+          }
+        }
+      }
+    }
+  }
   .resto-name-fav {
     display: flex;
     flex-direction: row;
@@ -37,6 +58,13 @@ a {
     justify-content: space-between;
     padding-top: 5px;
     padding-bottom: 10px;
+    @media screen and (min-width: 992px) {
+      justify-content: center;
+      .fa-regular.fa-heart,
+      .fa-solid.fa-heart {
+        right: 10vw;
+      }
+    }
     h2 {
       font-family: "Shrikhand", cursive;
       font-size: 1.7em;
@@ -133,80 +161,5 @@ a {
         transition: transform 500ms ease-in-out 100ms;
       }
     }
-  }
-
-}
-
-@keyframes appearance {
-  0% {
-    transform: translateY(20px);
-    opacity: 0;
-  }
-
-  75% {
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-.appearance {
-  animation: appearance 1.5s ease-in-out;
-}
-
-.dish1 {
-  animation-delay: 0;
-}
-
-.dish2 {
-  animation-delay: 150ms;
-}
-
-.dish3 {
-  animation-delay: 300ms;
-}
-
-.dish4 {
-  animation-delay: 400ms;
-}
-
-@media screen and (min-width: 992px) {
-  header > img {
-    height: 67vh;
-  }
-
-  .menu {
-    margin: -50px auto 0 auto;
-    padding: 30px 50px;
-    display: flex;
-    flex-direction: column;
-    .card-dish {
-      padding: 20px;
-    }
-  }
-
-  .menu .resto-name-fav {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding-top: 5px;
-    padding-bottom: 10px;
-  }
-  
-
-  .menu .card-dish:hover {
-    padding-right: 6vw;
-  }
-
-  .menu .card-dish:hover .dish-animation {
-    transform: translate(-5vw);
-  }
-
-  .menu .card-dish .dish-animation {
-    width: 5vw;
-    right: -5vw;
   }
 }
