W3C Validation CSS & HTML ok

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,7 +271,7 @@ body {
 }
 
 .dish1 {
-  animation-delay: 0;
+  animation-delay: 0ms;
 }
 
 .dish2 {
@@ -365,7 +365,7 @@ a {
 }
 
 .fa-location-dot {
-  translate: -15px;
+  transform: translate(-15px);
 }
 
 .explore-operation {
@@ -460,7 +460,7 @@ section {
   border-radius: 50%;
   width: 20px;
   height: 20px;
-  translate: -40px;
+  transform: translate(-40px);
 }
 
 .restaurants {
