--- a/sass/pages/_page-resto.scss
+++ b/sass/pages/_page-resto.scss
@@ -27,139 +27,87 @@ a {
   background-color: #f6f6f6;
   padding: 20px;
   border-radius: 40px 40px 0 0;
-  @media screen and (min-width: 768px) and (max-width: 992px) {
+  @media screen and (min-width: 769px) and (max-width: 991px) {
     max-width: 600px;
     margin: -30px auto 0 auto;
   }
   @media screen and (min-width: 992px) {
-    .menu {
-      padding: 30px 50px;
-      display: flex;
-      flex-direction: column;
-      .card-dish {
-        padding: 20px;
-        .dish-animation {
-          width: 5vw;
-          right: -5vw;
-        }
-        &:hover {
-          padding-right: 6vw;
-          .dish-animation {
-            transform: translate(-5vw);
-          }
-        }
-      }
+    padding: 30px 50px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+.resto-name-fav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  @media screen and (min-width: 992px) {
+    justify-content: center;
+    .fa-regular.fa-heart,
+    .fa-solid.fa-heart {
+      right: 10vw;
     }
   }
-  .resto-name-fav {
+  h2 {
+    font-family: "Shrikhand", cursive;
+    font-size: 1.7em;
+    font-weight: 400;
+  }
+}
+.starters,
+.main-course,
+.desserts {
+  margin-top: 10px;
+}
+h3 {
+  font-size: 0.9em;
+  font-weight: 400;
+  padding: 10px 0;
+}
+h3::after {
+  content: "";
+  display: block;
+  width: 36px;
+  padding-top: 5px;
+  border-bottom: 3px solid #99e2d0;
+}
+
+.card-dish {
+  background-color: white;
+  border-radius: 15px;
+  padding: 10px 15px;
+  margin-bottom: 15px;
+  line-height: 1.5em;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  position: relative;
+  white-space: nowrap;
+  overflow: hidden;
+  @media screen and (min-width: 769px) and (max-width: 991px) {
+    padding: 15px;
+  }
+  h4 {
+    font-size: 1em;
+    padding-bottom: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  .description-price {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding-top: 5px;
-    padding-bottom: 10px;
-    @media screen and (min-width: 992px) {
-      justify-content: center;
-      .fa-regular.fa-heart,
-      .fa-solid.fa-heart {
-        right: 10vw;
-      }
-    }
-    h2 {
-      font-family: "Shrikhand", cursive;
-      font-size: 1.7em;
-      font-weight: 400;
-    }
-  }
-  .starters,
-  .main-course,
-  .desserts {
-    margin-top: 10px;
-  }
-  h3 {
     font-size: 0.9em;
-    font-weight: 400;
-    padding: 10px 0;
-  }
-  h3::after {
-    content: "";
-    display: block;
-    width: 36px;
-    padding-top: 5px;
-    border-bottom: 3px solid #99e2d0;
-  }
-
-  .card-dish {
-    background-color: white;
-    border-radius: 20px;
-    padding: 10px 15px;
-    margin-bottom: 15px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    position: relative;
-    white-space: nowrap;
-    overflow: hidden;
-    transition: padding-right 300ms ease-in-out;
-    &:hover {
-      padding-right: 20vw;
-      .dish-animation {
-        opacity: 1;
-        transform: translate(-10vw);
-      }
-      .fa-circle-check {
-        transform: rotate(1turn);
-      }
-    }
-    &:active {
-      .dish-animation {
-        background-color: #9356dc;
-        .fa-circle-check {
-          background-color: #9356dc;
-        }
-      }
-    }
-    h4 {
-      font-size: 1em;
-      padding-bottom: 5px;
+    .description {
+      white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
+      padding-right: 7px;
     }
-    .description-price {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      .description {
-        font-size: 0.83em;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        padding-right: 7px;
-      }
-      .price {
-        font-weight: bold;
-        font-size: 0.9em;
-      }
-    }
-    .dish-animation {
-      width: 15vw;
-      height: 100%;
-      right: -10vw;
-      background-color: #99e2d0;
-      border-top-right-radius: 20px;
-      border-bottom-right-radius: 20px;
-      position: absolute;
-      top: 0;
-      opacity: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 500ms ease-in-out;
-      .fa-circle-check {
-        color: white;
-        background-color: #99e2d0;
-        font-size: 1.5em;
-        transition: transform 500ms ease-in-out 100ms;
-      }
+    .price {
+      font-weight: bold;
     }
   }
 }
