--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,26 +26,39 @@ h1 {
 }
 
 h2 {
-    font-size: 1em;
-    font-weight: 500;
+  font-size: 1em;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 1.5em;
+  padding-bottom: 25px;
+}
+
+.menu h3 {
+  font-size: 0.9em;
+  font-weight: 400;
+  padding: 10px 0;
+  &::after {
+    content: "";
+    display: block;
+    width: 36px;
+    padding-top: 5px;
+    border-bottom: 3px solid #99e2d0;
   }
-  
-  h3 {
-    font-size: 1.5em;
-    padding-bottom: 25px;
-  }
-  
-  h4 {
-    font-size: 0.9em;
-  }
-  
-  h5 {
-    font-size: 1.1em;
-  }
-  
-  h6 {
-    font-family: "Shrikhand", cursive;
-    font-size: 1.1em;
-    font-weight: 400;
-    padding-bottom: 10px;
-  }
+}
+
+h4 {
+  font-size: 0.9em;
+}
+
+h5 {
+  font-size: 1.1em;
+}
+
+h6 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.1em;
+  font-weight: 400;
+  padding-bottom: 10px;
+}
