--- a/sass/abstracts/_animation.scss
+++ b/sass/abstracts/_animation.scss
@@ -21,6 +21,17 @@
     width: 10vw;
     height: 10vw;
   }
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation: load-icons 550ms ease-in-out both;
+    @for $i from 1 through 6 {
+      &:nth-child(#{$i}) {
+        animation-delay: 550ms * $i;
+      }
+    }
+  }
 }
 
 .bg-icons {
@@ -35,18 +46,6 @@
   @media screen and (min-width: 992px) {
     width: 15vw;
     height: 15vw;
-  }
-}
-
-.icons img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  animation: load-icons 550ms ease-in-out both;
-  @for $i from 1 through 6 {
-    &:nth-child(#{$i}) {
-      animation-delay: 550ms * $i;
-    }
   }
 }
 
