--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -14,6 +14,10 @@ footer a {
   color: white;
 }
 
+.contact:hover {
+  color: $color-tertiary;
+}
+
 .fa-utensils {
   padding-right: 14px;
   padding-left: 2px;
