--- a/sass/abstracts/_animation.scss
+++ b/sass/abstracts/_animation.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
   animation: spinner-opacity 3000ms forwards;
   z-index: 2;
 }
