--- a/sass/abstracts/_animation.scss
+++ b/sass/abstracts/_animation.scss
@@ -14,6 +14,21 @@
   z-index: 2;
 }
 
+.bg-icons {
+  background-color: #9356dc;
+  border-radius: 50%;
+  width: 30vw;
+  height: 30vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: bg-icons 2500ms forwards;
+  @media screen and (min-width: 992px) {
+    width: 15vw;
+    height: 15vw;
+  }
+}
+
 .icons {
   width: 20vw;
   height: 20vw;
@@ -27,26 +42,11 @@
     width: 100%;
     height: 100%;
     animation: load-icons 550ms ease-in-out both;
-    @for $i from 1 through 6 {
+    @for $i from 1 through 3 {
       &:nth-child(#{$i}) {
         animation-delay: 550ms * $i;
       }
     }
-  }
-}
-
-.bg-icons {
-  background-color: #9356dc;
-  border-radius: 50%;
-  width: 30vw;
-  height: 30vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: bg-icons 2500ms forwards;
-  @media screen and (min-width: 992px) {
-    width: 15vw;
-    height: 15vw;
   }
 }
 
@@ -211,7 +211,7 @@
   transition: all 500ms ease-in-out;
   .fa-circle-check {
     color: white;
-    background-color: #99e2d0;
+    background-color: #99e2d0 500ms ease-in-out;
     transition: transform 500ms ease-in-out 100ms;
   }
   font-size: 1.5em;
